--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ matplotlib>=1.4.3
 pandas>=0.19
 seaborn==0.10.0
 streamlit
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Werkzeug==0.15.5
